--- a/mods.html
+++ b/mods.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div class="mods">
-      <div>infcash</div>
+      <div>infinitecash</div>
       <div style="margin-left: 20px;">description: Adds 5 cash every update ( half a sec )</div>
       <div style="margin-left: 20px;">author: D441D</div>
       <p> </p>
