--- a/mods.html
+++ b/mods.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Indented Child Elements</title>
+<title>Mod List</title>
 <style>
   body {
       font-family: 'Ubuntu', sans-serif;
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div class="mods">
-      <div>infinitecash</div>
+      <div>infcash</div>
       <div style="margin-left: 20px;">description: Adds 5 cash every update ( half a sec )</div>
       <div style="margin-left: 20px;">author: D441D</div>
       <p> </p>
